# truck_flow_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  run.py
apps/accounts/: apps.py  auth_urls.py  auth_views.py  authentication.py  dependencies.py  models.py  permissions.py  serializers.py  urls.py
apps/accounts/application/dtos/: commands.py
apps/accounts/application/services/: user_controller.py
apps/accounts/application/use_cases/: change_password_use_case.py  create_user_use_case.py  deactivate_user_use_case.py  get_user_use_case.py  list_users_use_case.py  update_user_use_case.py
apps/accounts/domain/: entities.py  exceptions.py  repositories.py
apps/accounts/infrastructure/persistence/: repositories.py
apps/accounts/migrations/: 0001_initial.py  0002_add_jti_unique.py
apps/accounts/presentation/: error_responses.py  response_factory.py  serializers.py  views.py
apps/accounts/services/: __init__.py  session_service.py
apps/trucks/: apps.py  dependencies.py  models.py
apps/trucks/application/constants/: __init__.py  money.py
apps/trucks/application/dtos/: __init__.py  commands.py
apps/trucks/application/services/: __init__.py  truck_controller.py
apps/trucks/domain/: entities.py  exceptions.py  repositories.py
apps/trucks/management/: __init__.py
apps/trucks/migrations/: 0001_initial.py  0002_alter_truckmodel_id.py
apps/trucks/presentation/: dashboard_views.py  error_responses.py  exception_handler.py  response_factory.py  serializers.py  urls.py  views.py
apps/trucks/tests/: __init__.py
config/: __init__.py  asgi.py  env.py  exception_handler.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  dev.py  prod.py
core/: models.py
scripts/: format_project.py
(+35 files in other folders)
